--- a/docs/auto_examples/jittor/plot_image_matching.ipynb
+++ b/docs/auto_examples/jittor/plot_image_matching.ipynb
@@ -44,7 +44,7 @@
       },
       "outputs": [],
       "source": [
-        "import jittor as jt # jittor backend\nfrom jittor import Var, models # CV models\nimport pygmtools as pygm\nimport matplotlib.pyplot as plt # for plotting\nfrom matplotlib.patches import ConnectionPatch # for plotting matching result\nimport scipy.io as sio # for loading .mat file\nimport scipy.spatial as spa # for Delaunay triangulation\nfrom sklearn.decomposition import PCA as PCAdimReduc\nimport itertools\nimport numpy as np\nfrom PIL import Image\npygm.BACKEND = 'jittor' # set default backend for pygmtools\n\n# jt.flags.use_cuda = 1 # use cuda"
+        "import jittor as jt # jittor backend\nfrom jittor import Var, models # CV models\nimport pygmtools as pygm\nimport matplotlib.pyplot as plt # for plotting\nfrom matplotlib.patches import ConnectionPatch # for plotting matching result\nimport scipy.io as sio # for loading .mat file\nimport scipy.spatial as spa # for Delaunay triangulation\nfrom sklearn.decomposition import PCA as PCAdimReduc\nimport itertools\nimport numpy as np\nfrom PIL import Image\npygm.BACKEND = 'jittor' # set default backend for pygmtools\n\njt.flags.use_cuda = jt.has_cuda"
       ]
     },
     {
