--- a/docs/auto_examples/jittor/plot_seed_graph_match.ipynb
+++ b/docs/auto_examples/jittor/plot_seed_graph_match.ipynb
@@ -44,7 +44,7 @@
       },
       "outputs": [],
       "source": [
-        "import jittor as jt # jittor backend\nimport pygmtools as pygm\nimport matplotlib.pyplot as plt # for plotting\nfrom matplotlib.patches import ConnectionPatch # for plotting matching result\nimport networkx as nx # for plotting graphs\npygm.BACKEND = 'jittor' # set default backend for pygmtools\n_ = jt.set_seed(1) # fix random seed\n\n# jt.flags.use_cuda = 1 # use cuda\n\n\n#! The following code is used for testing jittor codes.\nimport numpy as np\n\ndef namestr(obj):\n return [name for name in globals() if globals()[name] is obj][0]\n\ndef load_var(*args):\n    ret = []\n    for var in args:\n        ret.append(jt.Var(np.load(f'../{namestr(var)}.npy')))\n    return ret\n        \n\ndef compare_var(*args):\n    for var in args:\n        var_np = np.load(f'../{namestr(var)}.npy')\n        assert np.allclose(var.numpy(), var_np, rtol=1e-4)"
+        "import jittor as jt # jittor backend\nimport pygmtools as pygm\nimport matplotlib.pyplot as plt # for plotting\nfrom matplotlib.patches import ConnectionPatch # for plotting matching result\nimport networkx as nx # for plotting graphs\npygm.BACKEND = 'jittor' # set default backend for pygmtools\n_ = jt.set_seed(1) # fix random seed\n\njt.flags.use_cuda = jt.has_cuda"
       ]
     },
     {
@@ -80,7 +80,7 @@
       },
       "outputs": [],
       "source": [
-        "X_gt = seed_mat.clone()\n\n#! X_gt[num_seeds:, num_seeds:][jt.arange(0, num_nodes-num_seeds, dtype=jt.int64), jt.randperm(num_nodes-num_seeds)] = 1 doesn't work.\nX_gt[jt.arange(num_seeds, num_nodes), jt.arange(num_seeds, num_nodes)[jt.randperm(num_nodes-num_seeds)]] = 1\nA1 = jt.rand(num_nodes, num_nodes)\nA1 = (A1 + A1.t() > 1.) * (A1 + A1.t()) / 2\n\n#! jt.diag(A1)[:] = 0 doesn't work.\nA1[jt.arange(A1.shape[0]), jt.arange(A1.shape[0])] = 0\nA2 = jt.matmul(jt.matmul(X_gt.t(), A1), X_gt)\nn1 = jt.Var([num_nodes])\nn2 = jt.Var([num_nodes])"
+        "X_gt = seed_mat.clone()\n\nX_gt[jt.arange(num_seeds, num_nodes), jt.arange(num_seeds, num_nodes)[jt.randperm(num_nodes-num_seeds)]] = 1\nA1 = jt.rand(num_nodes, num_nodes)\nA1 = (A1 + A1.t() > 1.) * (A1 + A1.t()) / 2\n\nA1[jt.arange(A1.shape[0]), jt.arange(A1.shape[0])] = 0\nA2 = jt.matmul(jt.matmul(X_gt.t(), A1), X_gt)\nn1 = jt.Var([num_nodes])\nn2 = jt.Var([num_nodes])"
       ]
     },
     {
@@ -406,7 +406,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.8.0"
     }
   },
   "nbformat": 4,
