--- a/docs/auto_examples/jittor/plot_subgraphs.ipynb
+++ b/docs/auto_examples/jittor/plot_subgraphs.ipynb
@@ -44,7 +44,7 @@
       },
       "outputs": [],
       "source": [
-        "import jittor as jt # jittor backend\nimport pygmtools as pygm\nimport matplotlib.pyplot as plt # for plotting\nfrom matplotlib.patches import ConnectionPatch # for plotting matching result\nimport networkx as nx # for plotting graphs\npygm.BACKEND = 'jittor' # set default backend for pygmtools\n_ = jt.set_seed(1) # fix random seed\n\n# jt.flags.use_cuda = 1 # use cuda\n\n#! The following code is used for testing jittor codes.\nimport numpy as np\n\ndef namestr(obj):\n return [name for name in globals() if globals()[name] is obj][0]\n\ndef load_var(*args):\n    ret = []\n    for var in args:\n        ret.append(jt.Var(np.load(f'../{namestr(var)}.npy')))\n    return ret\n        \n\ndef compare_var(*args):\n    for var in args:\n        var_np = np.load(f'../{namestr(var)}.npy')\n        assert np.allclose(var.numpy(), var_np, rtol=1e-4)"
+        "import jittor as jt # jittor backend\nimport pygmtools as pygm\nimport matplotlib.pyplot as plt # for plotting\nfrom matplotlib.patches import ConnectionPatch # for plotting matching result\nimport networkx as nx # for plotting graphs\npygm.BACKEND = 'jittor' # set default backend for pygmtools\n_ = jt.set_seed(1) # fix random seed\n\njt.flags.use_cuda = jt.has_cuda"
       ]
     },
     {
@@ -352,7 +352,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.8.0"
     }
   },
   "nbformat": 4,
