--- a/docs/auto_examples/jittor/plot_isomorphic_graphs_jittor.ipynb
+++ b/docs/auto_examples/jittor/plot_isomorphic_graphs_jittor.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Introduction: Matching Isomorphic Graphs\n\nThis example is an introduction to ``pygmtools`` which shows how to match isomorphic graphs.\nIsomorphic graphs means graphs whose structures are identical, but the node correspondence is unknown.\n"
+        "\n# Introduction: Matching Isomorphic Graphs\n\nThis example is an introduction to ``pygmtools`` which shows how to match isomorphic graphs.\nIsomorphic graphs mean graphs whose structures are identical, but the node correspondence is unknown.\n"
       ]
     },
     {
@@ -105,7 +105,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Visualization of the affinity matrix. For graph matching problem with $N$ nodes, the affinity matrix\nhas $N^2\\times N^2$ elements because there are $N^2$ edges in each graph.\n\n<div class=\"alert alert-info\"><h4>Note</h4><p>The diagonal elements of the affinity matrix is empty because there is no node features in this example.</p></div>\n\n\n"
+        "Visualization of the affinity matrix. For graph matching problem with $N$ nodes, the affinity matrix\nhas $N^2\\times N^2$ elements because there are $N^2$ edges in each graph.\n\n<div class=\"alert alert-info\"><h4>Note</h4><p>The diagonal elements of the affinity matrix are empty because there is no node features in this example.</p></div>\n\n\n"
       ]
     },
     {
@@ -352,7 +352,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.0"
+      "version": "3.8.3"
     }
   },
   "nbformat": 4,
