--- a/docs/auto_examples/jittor/plot_model_fusion_jittor.ipynb
+++ b/docs/auto_examples/jittor/plot_model_fusion_jittor.ipynb
@@ -141,7 +141,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Build the affinity matrix for graph matching\nAs shown in the following plot, the neural networks can be regarded as graphs. The weights corresponds to\nthe edge features, and the bias corresponds to the node features. In this example, the neural network\ndoes not have bias so that there are only edge features.\n\n\n"
+        "## Build the affinity matrix for graph matching\nAs shown in the following plot, the neural networks can be regarded as graphs. The weights correspond to\nthe edge features, and the bias corresponds to the node features. In this example, the neural network\ndoes not have bias so that there are only edge features.\n\n\n"
       ]
     },
     {
@@ -231,7 +231,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Project ``X`` to neural network matching result. The neural network matching matrix is built by applying\nHungarian to small blocks of ``X``, because only the channels from the same neural network layer can be\nmatched.\n\n<div class=\"alert alert-info\"><h4>Note</h4><p>In this example, we assume the last FC layer is aligned and need not to be matched.</p></div>\n\n\n"
+        "Project ``X`` to neural network matching result. The neural network matching matrix is built by applying\nHungarian to small blocks of ``X``, because only the channels from the same neural network layer can be\nmatched.\n\n<div class=\"alert alert-info\"><h4>Note</h4><p>In this example, we assume the last FC layer is aligned and need not be matched.</p></div>\n\n\n"
       ]
     },
     {
@@ -359,7 +359,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.0"
+      "version": "3.8.3"
     }
   },
   "nbformat": 4,
