--- a/docs/auto_examples/paddle/plot_deep_image_matching_paddle.ipynb
+++ b/docs/auto_examples/paddle/plot_deep_image_matching_paddle.ipynb
@@ -188,7 +188,7 @@
       },
       "outputs": [],
       "source": [
-        "cnn = CNNNet(vgg16_cnn)\npath = '../data/vgg16_pca_voc_paddle.pdparams'\n# download url:\n# path = pygm.utils.download('vgg16_pca_voc_paddle.pdparams', 'https://drive.google.com/u/0/uc?export=download&confirm=Z-AR&id=1rIb_fPx20a4Q1GGlUsF8lAY1XNCyGO6L')\ncnn.set_dict(paddle.load(path))\nwith paddle.set_grad_enabled(False):\n    feat1_local, feat1_global = cnn(paddle_img1)\n    feat2_local, feat2_global = cnn(paddle_img2)"
+        "cnn = CNNNet(vgg16_cnn)\npath = pygm.utils.download('vgg16_pca_voc_paddle.pdparams', 'https://drive.google.com/u/0/uc?export=download&confirm=Z-AR&id=1rIb_fPx20a4Q1GGlUsF8lAY1XNCyGO6L')\ncnn.set_dict(paddle.load(path))\nwith paddle.set_grad_enabled(False):\n    feat1_local, feat1_global = cnn(paddle_img1)\n    feat2_local, feat2_global = cnn(paddle_img2)"
       ]
     },
     {
@@ -296,7 +296,7 @@
       },
       "outputs": [],
       "source": [
-        "path = '../data/vgg16_ipca_voc_paddle.pdparams'\n# download url:\n# path = pygm.utils.download('vgg16_ipca_voc_paddle.pdparams', 'https://drive.google.com/u/0/uc?export=download&confirm=Z-AR&id=1h_VEmlfMAeBszoR0DvMr6EPXdNVTfTgf')\ncnn.set_dict(paddle.load(path))\n\nwith paddle.set_grad_enabled(False):\n    feat1_local, feat1_global = cnn(paddle_img1)\n    feat2_local, feat2_global = cnn(paddle_img2)"
+        "path = pygm.utils.download('vgg16_ipca_voc_paddle.pdparams', 'https://drive.google.com/u/0/uc?export=download&confirm=Z-AR&id=1h_VEmlfMAeBszoR0DvMr6EPXdNVTfTgf')\ncnn.set_dict(paddle.load(path))\n\nwith paddle.set_grad_enabled(False):\n    feat1_local, feat1_global = cnn(paddle_img1)\n    feat2_local, feat2_global = cnn(paddle_img2)"
       ]
     },
     {
@@ -404,7 +404,7 @@
       },
       "outputs": [],
       "source": [
-        "path = '../data/vgg16_cie_voc_paddle.pdparams'\n# download url:\n# path = pygm.utils.download('vgg16_cie_voc_paddle.pdparams', 'https://drive.google.com/u/0/uc?export=download&confirm=Z-AR&id=18MwP3nuMkqDiiwRd_y6rlFmtjKi9THb-')\ncnn.set_dict(paddle.load(path))\n\nwith paddle.set_grad_enabled(False):\n    feat1_local, feat1_global = cnn(paddle_img1)\n    feat2_local, feat2_global = cnn(paddle_img2)"
+        "path = pygm.utils.download('vgg16_cie_voc_paddle.pdparams', 'https://drive.google.com/u/0/uc?export=download&confirm=Z-AR&id=18MwP3nuMkqDiiwRd_y6rlFmtjKi9THb-')\ncnn.set_dict(paddle.load(path))\n\nwith paddle.set_grad_enabled(False):\n    feat1_local, feat1_global = cnn(paddle_img1)\n    feat2_local, feat2_global = cnn(paddle_img2)"
       ]
     },
     {
@@ -647,7 +647,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.8.3"
     }
   },
   "nbformat": 4,
