--- a/docs/auto_examples/paddle/plot_image_matching_paddle.ipynb
+++ b/docs/auto_examples/paddle/plot_image_matching_paddle.ipynb
@@ -152,7 +152,7 @@
       },
       "outputs": [],
       "source": [
-        "vgg16_cnn = vgg16(pretrained=False, batch_norm=True) # no official pretrained paddle weight for vgg16_bn provided yet\npath = '../data/vgg16_bn.pdparams'\n# download url:\n# path = pygm.utils.download(filename='vgg16_bn.pdparams', \\\n#                            url='https://drive.google.com/u/0/uc?export=download&confirm=Z-AR&id=11AGmtBrIZJLXJMk4Um9xQPai2EH7KjRY', \\\n#                            md5='cf6079f3c8d16f42a93fc8f8b62e20d1') \nvgg16_cnn.set_dict(paddle.load(path))\npaddle_img1 = paddle.to_tensor(np.array(img1, dtype=np.float32) / 256).transpose((2, 0, 1)).unsqueeze(0) # shape: BxCxHxW\npaddle_img2 = paddle.to_tensor(np.array(img2, dtype=np.float32) / 256).transpose((2, 0, 1)).unsqueeze(0) # shape: BxCxHxW\nwith paddle.set_grad_enabled(False):\n    feat1 = vgg16_cnn.features(paddle_img1)\n    feat2 = vgg16_cnn.features(paddle_img2)"
+        "vgg16_cnn = vgg16(pretrained=False, batch_norm=True) # no official pretrained paddle weight for vgg16_bn provided yet\npath = pygm.utils.download(filename='vgg16_bn.pdparams', \\\n                           url='https://drive.google.com/u/0/uc?export=download&confirm=Z-AR&id=11AGmtBrIZJLXJMk4Um9xQPai2EH7KjRY', \\\n                           md5='cf6079f3c8d16f42a93fc8f8b62e20d1') \nvgg16_cnn.set_dict(paddle.load(path))\npaddle_img1 = paddle.to_tensor(np.array(img1, dtype=np.float32) / 256).transpose((2, 0, 1)).unsqueeze(0) # shape: BxCxHxW\npaddle_img2 = paddle.to_tensor(np.array(img2, dtype=np.float32) / 256).transpose((2, 0, 1)).unsqueeze(0) # shape: BxCxHxW\nwith paddle.set_grad_enabled(False):\n    feat1 = vgg16_cnn.features(paddle_img1)\n    feat2 = vgg16_cnn.features(paddle_img2)"
       ]
     },
     {
@@ -285,7 +285,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The output of RRWM is a soft matching matrix. Hungarian algorithm is then adopted to reach a discrete matching matrix\n\n\n"
+        "The output of RRWM is a soft matching matrix. Hungarian algorithm is then adopted to reach a discrete matching matrix.\n\n\n"
       ]
     },
     {
@@ -406,7 +406,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.8.3"
     }
   },
   "nbformat": 4,
