--- a/docs/auto_examples/numpy/plot_seed_graph_match_numpy.ipynb
+++ b/docs/auto_examples/numpy/plot_seed_graph_match_numpy.ipynb
@@ -285,7 +285,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Other solvers are also available\nOnly the affinity matrix is modified to encode matching priors, thus other graph matching solvers are also\navailable to handle this seeded graph matching setting.\n\n### Classic IPFP solver\nSee :func:`~pygmtools.classic_solvers.ipfp` for the API reference.\n\n\n"
+        "## Other solvers are also available\nOnly the affinity matrix is modified to encode matching priors. Thus, other graph matching solvers are also\navailable to handle this seeded graph matching setting.\n\n### Classic IPFP solver\nSee :func:`~pygmtools.classic_solvers.ipfp` for the API reference.\n\n\n"
       ]
     },
     {
@@ -406,7 +406,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.0"
+      "version": "3.8.3"
     }
   },
   "nbformat": 4,
