--- a/docs/auto_examples/paddle/plot_seed_graph_match_paddle.ipynb
+++ b/docs/auto_examples/paddle/plot_seed_graph_match_paddle.ipynb
@@ -26,7 +26,7 @@
       },
       "outputs": [],
       "source": [
-        "# Author: Runzhong Wang <runzhong.wang@sjtu.edu.cn>, Qi Liu <purewhite@sjtu.edu.cn>\n#\n# License: Mulan PSL v2 License"
+        "# Author: Runzhong Wang <runzhong.wang@sjtu.edu.cn>\n#         Qi Liu <purewhite@sjtu.edu.cn>\n#\n# License: Mulan PSL v2 License"
       ]
     },
     {
@@ -285,7 +285,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Other solvers are also available\nOnly the affinity matrix is modified to encode matching priors, thus other graph matching solvers are also\navailable to handle this seeded graph matching setting.\n\n### Classic IPFP solver\nSee :func:`~pygmtools.classic_solvers.ipfp` for the API reference.\n\n\n"
+        "## Other solvers are also available\nOnly the affinity matrix is modified to encode matching priors. Thus, other graph matching solvers are also\navailable to handle this seeded graph matching setting.\n\n### Classic IPFP solver\nSee :func:`~pygmtools.classic_solvers.ipfp` for the API reference.\n\n\n"
       ]
     },
     {
@@ -406,7 +406,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.8.3"
     }
   },
   "nbformat": 4,
