--- a/docs/auto_examples/paddle/plot_subgraphs_paddle.ipynb
+++ b/docs/auto_examples/paddle/plot_subgraphs_paddle.ipynb
@@ -26,7 +26,7 @@
       },
       "outputs": [],
       "source": [
-        "# Author: Runzhong Wang <runzhong.wang@sjtu.edu.cn>, Qi Liu <purewhite@sjtu.edu.cn>\n#\n# License: Mulan PSL v2 License"
+        "# Author: Runzhong Wang <runzhong.wang@sjtu.edu.cn>\n#         Qi Liu <purewhite@sjtu.edu.cn>\n#\n# License: Mulan PSL v2 License"
       ]
     },
     {
@@ -352,7 +352,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.8.3"
     }
   },
   "nbformat": 4,
