--- a/docs/auto_examples/pytorch/plot_image_matching_pytorch.ipynb
+++ b/docs/auto_examples/pytorch/plot_image_matching_pytorch.ipynb
@@ -285,7 +285,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The output of RRWM is a soft matching matrix. Hungarian algorithm is then adopted to reach a discrete matching matrix\n\n\n"
+        "The output of RRWM is a soft matching matrix. Hungarian algorithm is then adopted to reach a discrete matching matrix.\n\n\n"
       ]
     },
     {
@@ -406,7 +406,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.0"
+      "version": "3.8.3"
     }
   },
   "nbformat": 4,
