--- a/docs/auto_examples/4.multi-graph_matching/plot_multi_graph_match_pytorch.ipynb
+++ b/docs/auto_examples/4.multi-graph_matching/plot_multi_graph_match_pytorch.ipynb
@@ -1,17 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "%matplotlib inline"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -62,7 +51,7 @@
       },
       "outputs": [],
       "source": [
-        "def load_image(pth, resize, n_outlier):\n    # load images\n    img = Image.open(pth + '.png')\n    # load key points' coordinates\n    kpts = torch.tensor(sio.loadmat(pth + '.mat')['pts_coord'])\n    kpts[0] = kpts[0] * resize[0] / img.size[0]\n    kpts[1] = kpts[1] * resize[1] / img.size[1]\n    img = img.resize(resize, resample=Image.BILINEAR)\n    # generate random outlier\n    if n_outlier != 0:\n        random_kpts = torch.rand((2, n_outlier))\n        random_kpts[0] = random_kpts[0] * resize[0]\n        random_kpts[1] = random_kpts[1] * resize[1]\n        kpts = torch.cat([kpts, random_kpts], dim=1)\n    # random shuffle the key points\n    perm = np.eye(kpts.shape[1])\n    # np.random.shuffle(perm)\n    # perm = torch.tensor(perm)\n    # kpts = torch.matmul(kpts, perm)\n    return img, kpts, perm\n\n\nobj_resize = (256, 256)\ndata_dir = '../data/mgm_data'\nn_images = 30\nn_outlier = 0\nimg_list = []\nkpts_list = []\nn_kpts_list = []\nperm_list = []\n\nfor root, ds, fs in os.walk(data_dir):\n    for i, f in enumerate(fs):\n        if f[:-3] == 'mat':\n            continue\n        if len(img_list) == n_images:\n            break\n        path = os.path.join(data_dir, f[:-4])\n        img, kpts, perm = load_image(pth=path, resize=obj_resize, n_outlier=n_outlier)\n        img_list.append(img)\n        kpts_list.append(kpts)\n        n_kpts_list.append(kpts.shape[1])\n        perm_list.append(perm)"
+        "def load_image(pth, resize, n_outlier):\n    # load images\n    img = Image.open(pth + '.png')\n    # load key points' coordinates\n    kpts = torch.tensor(sio.loadmat(pth + '.mat')['pts_coord'])\n    kpts[0] = kpts[0] * resize[0] / img.size[0]\n    kpts[1] = kpts[1] * resize[1] / img.size[1]\n    img = img.resize(resize, resample=Image.BILINEAR)\n    # generate random outlier\n    if n_outlier != 0:\n        random_kpts = torch.rand((2, n_outlier))\n        random_kpts[0] = random_kpts[0] * resize[0]\n        random_kpts[1] = random_kpts[1] * resize[1]\n        kpts = torch.cat([kpts, random_kpts], dim=1)\n    # random shuffle the key points\n    perm = np.eye(kpts.shape[1])\n    # np.random.shuffle(perm)\n    # perm = torch.tensor(perm)\n    # kpts = torch.matmul(kpts, perm)\n    return img, kpts, perm\n\n\nobj_resize = (256, 256)\ndata_dir = '../data/mgm_data/Car'\nn_images = 30\nn_outlier = 0\nimg_list = []\nkpts_list = []\nn_kpts_list = []\nperm_list = []\n\nfor root, ds, fs in os.walk(data_dir):\n    for i, f in enumerate(fs):\n        if f[-3:] == 'mat':\n            continue\n        if len(img_list) == n_images:\n            break\n        path = os.path.join(data_dir, f[:-4])\n        img, kpts, perm = load_image(pth=path, resize=obj_resize, n_outlier=n_outlier)\n        img_list.append(img)\n        kpts_list.append(kpts)\n        n_kpts_list.append(kpts.shape[1])\n        perm_list.append(perm)"
       ]
     },
     {
@@ -80,7 +69,7 @@
       },
       "outputs": [],
       "source": [
-        "def plot_image_with_graph(img, kpt, A=None):\n    plt.imshow(img)\n    plt.scatter(kpt[0], kpt[1], c='w', edgecolors='k')\n    if A is not None:\n        for idx in torch.nonzero(A, as_tuple=False):\n            plt.plot((kpt[0, idx[0]], kpt[0, idx[1]]), (kpt[1, idx[0]], kpt[1, idx[1]]), 'k-')\n\n\nplt.figure(figsize=(4 * n_images, 4))\nfor i in range(n_images):\n    plt.subplot(1, n_images, i + 1)\n    plt.title('Image {}'.format(i + 1))\n    plot_image_with_graph(img_list[i], kpts_list[i])\n# plt.savefig('image')\n# plt.close()"
+        "def plot_image_with_graph(img, kpt, A=None):\n    plt.imshow(img)\n    plt.scatter(kpt[0], kpt[1], c='w', edgecolors='k')\n    if A is not None:\n        for idx in torch.nonzero(A, as_tuple=False):\n            plt.plot((kpt[0, idx[0]], kpt[0, idx[1]]), (kpt[1, idx[0]], kpt[1, idx[1]]), 'k-')\n\n\nplt.figure(figsize=(4 * n_images, 4))\nfor i in range(n_images):\n    plt.subplot(1, n_images, i + 1)\n    plt.title('Image {}'.format(i + 1))\n    plot_image_with_graph(img_list[i], kpts_list[i])"
       ]
     },
     {
@@ -262,7 +251,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.3"
+      "version": "3.9.17"
     }
   },
   "nbformat": 4,
