Refine docs & examples for multi-graph matching

--- a/docs/auto_examples/4.multi-graph_matching/plot_multi_graph_match_numpy.ipynb
+++ b/docs/auto_examples/4.multi-graph_matching/plot_multi_graph_match_numpy.ipynb
@@ -94,7 +94,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Build affinity matrix\n\n"
+        "## Build affinity matrix\nWe follow the formulation of Quadratic Assignment Problem (QAP):\n\n\\begin{align}&\\max_{\\mathbf{X}} \\ \\texttt{vec}(\\mathbf{X})^\\top \\mathbf{K} \\texttt{vec}(\\mathbf{X})\\\\\n    s.t. \\quad &\\mathbf{X} \\in \\{0, 1\\}^{n_1\\times n_2}, \\ \\mathbf{X}\\mathbf{1} = \\mathbf{1}, \\ \\mathbf{X}^\\top\\mathbf{1} \\leq \\mathbf{1}\\end{align}\n\nwhere the first step is to build the affinity matrix ($\\mathbf{K}$) for each pair of graphs\n\n\n"
       ]
     },
     {
@@ -148,7 +148,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Pairwise graph matching by RRWM\n\n"
+        "## Pairwise graph matching by RRWM\nSee :func:`~pygmtools.classic_solvers.rrwm` for the API reference.\n\n\n"
       ]
     },
     {
@@ -166,7 +166,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Multi graph matching: CAO-M\n\n"
+        "## Multi graph matching by multi-graph solvers\n Multi graph matching: CAO-M\n See :func:`~pygmtools.multi_graph_solvers.cao` for the API reference.\n\n\n"
       ]
     },
     {
@@ -184,7 +184,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Multi graph matching: CAO-T\n\n"
+        "Multi graph matching: CAO-T\nSee :func:`~pygmtools.multi_graph_solvers.cao` for the API reference.\n\n\n"
       ]
     },
     {
@@ -202,7 +202,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Multi graph matching: MGM-Floyd-M\n\n"
+        "Multi graph matching: MGM-Floyd-M\nSee :func:`~pygmtools.multi_graph_solvers.mgm_floyd` for the API reference.\n\n\n"
       ]
     },
     {
@@ -220,7 +220,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Multi graph matching: MGM-Floyd-T\n\n"
+        "Multi graph matching: MGM-Floyd-T\nSee :func:`~pygmtools.multi_graph_solvers.mgm_floyd` for the API reference.\n\n\n"
       ]
     },
     {
