--- a/docs/auto_examples/4.multi-graph_matching/plot_multi_graph_match_pytorch.ipynb
+++ b/docs/auto_examples/4.multi-graph_matching/plot_multi_graph_match_pytorch.ipynb
@@ -69,7 +69,7 @@
       },
       "outputs": [],
       "source": [
-        "def plot_image_with_graph(img, kpt, A=None):\n    plt.imshow(img)\n    plt.scatter(kpt[0], kpt[1], c='w', edgecolors='k')\n    if A is not None:\n        for idx in torch.nonzero(A, as_tuple=False):\n            plt.plot((kpt[0, idx[0]], kpt[0, idx[1]]), (kpt[1, idx[0]], kpt[1, idx[1]]), 'k-')\n\n\nplt.figure(figsize=(4 * n_images, 4))\nfor i in range(n_images):\n    plt.subplot(1, n_images, i + 1)\n    plt.title('Image {}'.format(i + 1))\n    plot_image_with_graph(img_list[i], kpts_list[i])\n# plt.savefig('image')\n# plt.close()"
+        "def plot_image_with_graph(img, kpt, A=None):\n    plt.imshow(img)\n    plt.scatter(kpt[0], kpt[1], c='w', edgecolors='k')\n    if A is not None:\n        for idx in torch.nonzero(A, as_tuple=False):\n            plt.plot((kpt[0, idx[0]], kpt[0, idx[1]]), (kpt[1, idx[0]], kpt[1, idx[1]]), 'k-')\n\n\nplt.figure(figsize=(20, 18))\nfor i in range(n_images):\n    plt.subplot(5, n_images // 5, i + 1)\n    plt.title('Image {}'.format(i + 1))\n    plot_image_with_graph(img_list[i], kpts_list[i])\n# plt.savefig('image')\n# plt.close()"
       ]
     },
     {
@@ -251,7 +251,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.17"
+      "version": "3.10.13"
     }
   },
   "nbformat": 4,
