--- a/docs/auto_examples/2.seeded_graph_matching/plot_seed_graph_match_jittor.ipynb
+++ b/docs/auto_examples/2.seeded_graph_matching/plot_seed_graph_match_jittor.ipynb
@@ -33,7 +33,7 @@
       },
       "outputs": [],
       "source": [
-        "import jittor as jt # jittor backend\nimport pygmtools as pygm\nimport matplotlib.pyplot as plt # for plotting\nfrom matplotlib.patches import ConnectionPatch # for plotting matching result\nimport networkx as nx # for plotting graphs\npygm.set_backend('jittor') # set default backend for pygmtools\n_ = jt.set_seed(1) # fix random seed\n\njt.flags.use_cuda = False"
+        "import jittor as jt # jittor backend\nimport pygmtools as pygm\nimport matplotlib.pyplot as plt # for plotting\nfrom matplotlib.patches import ConnectionPatch # for plotting matching result\nimport networkx as nx # for plotting graphs\npygm.set_backend('jittor') # set default backend for pygmtools\n_ = jt.set_seed(1) # fix random seed"
       ]
     },
     {
